# SNNLab

./: .gitignore  MANIFEST.in  README.md  README_RU.md  pyproject.toml  snnlab-1.0.0-py3-none-any.whl
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: checkpoints_and_models.md  evaluation.md  getting_started.md  parameters_dci.md  parameters_reservoir.md  reproducibility.md
examples/: dci_checkpoint_resume_demo.py  dci_disjoint_assignment.yaml  dci_mnist_baseline.yaml  pause_resume_demo.py  reservoir_mnist_demo.yaml
snnlab/: README.md  __init__.py
snnlab/architectures/: README.md  __init__.py  dci.py  reservoir.py
snnlab/baselines/: README.md  __init__.py  dci_mnist_v0.yaml
snnlab/cli/: README.md  dci.py  dci_regression.py  reservoir.py
snnlab/configs/: README.md  __init__.py  base.py  dci.py  reservoir.py
snnlab/core/: README.md  __init__.py  catalog.py  encoders.py  events.py  metrics.py  numerical_methods.py  readouts.py  registry.py
snnlab/data/: README.md  __init__.py  datasets.py
snnlab/evaluation/: README.md  __init__.py  dci.py  reservoir.py
snnlab/experiments/: README.md  __init__.py  base.py  dci_trainer.py  reservoir_runner.py
snnlab/gui/: README.md  __init__.py  app.py  event_bridge.py  main_window.py  session.py  styles.py  workers.py
snnlab/i18n/: README.md  translator.py
snnlab/regression/: README.md  __init__.py  dci_notebook.py
snnlab/runtime/: README.md  __init__.py  checkpoint.py  control.py  (+2 more)
tests/: test_baselines.py  test_checkpoint.py  test_dci_assignment_policy.py  test_dci_evaluation.py  test_dci_evaluation_diagnostics.py  test_dci_notebook_regression.py  test_dci_quality_decoder.py  test_dci_resume_exact.py  test_dci_smoke.py  test_experiment_io.py  test_i18n.py  test_model_snapshot.py  test_numerical_methods.py  test_registry.py  test_reservoir_smoke.py  test_sample_schedule.py
tools/: generate_dci_notebook_fixture.py
(+17 files in other folders)
